--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700,900&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="fonts/icomoon/style.css">
+
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <!-- Style -->
     <link rel="stylesheet" href="style.css">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Form</title>
+    <title>Contact Form #1</title>
 </head>
 
 <body>
+
 
     <div class="content">
 
@@ -30,73 +37,67 @@
                             <h2 class="mb-5">Preencha o formulário. <br> é fácil.</h2>
 
                             <form class="border-right pr-5 mb-5" method="post" id="contactForm" name="contactForm">
-                                <div class="row">
-                                    <div class="col-md-6 form-group">
-                                        <input type="text" class="form-control" name="fname" id="fname"
-                                            placeholder="Primeiro Nome">
+
+
+
+                                <form action="https://formsubmit.co/wedsonjti@gmail.com" method="POST">
+                                    <input type="hidden" name="_subject" value="New Contact Email!">
+
+                                    <div class="row">
+                                        <div class="col-md-6 form-group">
+                                            <input type="text" class="form-control" name="fname" id="fname"
+                                                placeholder="Primeiro Nome" required>
+                                        </div>
+                                        <div class="col-md-6 form-group">
+                                            <input type="text" class="form-control" name="lname" id="lname"
+                                                placeholder="Sobrenome" required>
+                                        </div>
                                     </div>
-                                    <div class="col-md-6 form-group">
-                                        <input type="text" class="form-control" name="lname" id="lname"
-                                            placeholder="Sobrenome">
+                                    <div class="row">
+                                        <div class="col-md-12 form-group">
+                                            <input type="text" class="form-control" name="email" id="email"
+                                                placeholder="Email" required>
+                                            <input type="hidden" name="_next" value="/pages/sthanks.html">
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12 form-group">
-                                        <input type="text" class="form-control" name="email" id="email"
-                                            placeholder="Email">
+
+                                    <div class="row">
+                                        <div class="col-md-12 form-group">
+                                            <textarea class="form-control" name="message" id="message" cols="30"
+                                                rows="7" placeholder="Escreva sua mensagem..."></textarea>
+                                        </div>
                                     </div>
-                                </div>
-
-                                <div class="row">
-                                    <div class="col-md-12 form-group">
-                                        <textarea class="form-control" name="message" id="message" cols="30" rows="7"
-                                            placeholder="Escreva sua mensagem..."></textarea>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <input type="submit" value="Enviar Mensagem"
+                                                class="btn btn-primary rounded-0 py-2 px-4">
+                                            <span class="submitting"></span>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <input type="submit" value="Enviar Mensagem"
-                                            class="btn btn-primary rounded-0 py-2 px-4">
-                                        <span class="submitting"></span>
-                                    </div>
-                                </div>
-
-                                <body>
-
-                                    <form action="https://formsubmit.co/wedsonjti@gmail.com" method="post">
-                                        <input type="nome" name="Nome" required>
-                                        <input type="email" name="Email" placeholder="Email Adress" required>
-                                        <button type="submit">Enviar Email</button>
-                                    </form>
-
-                                </body>
-
-</html>-message-warning mt-4"></div>
-<div id="form-message-success">
-    Your message was sent, thank you!
-</div>
-
-</div>
-<div class="col-lg-4 ml-auto">
-    <h3 class="mb-4">Vamos conversar sobre tudo.</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil deleniti itaque similique
-        magni. Magni,
-        laboriosam perferendis maxime!</p>
-    <p><a href="#">ler mais</a></p>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+                                </form>
 
 
 
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.validate.min.js"></script>
-<script src="js/main.js"></script>
+                            </form>
+
+                            <div id="form-message-warning mt-4"></div>
+                            <div id="form-message-success">
+                                Your message was sent, thank you!
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
